# python-project-52

./: Makefile  README.md  build.sh  pyproject.toml  ruff.toml
.github/workflows/: build.yml
task_manager/: settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_options_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_task_labels.py  0003_alter_task_executor_alter_task_labels.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  list.html  show.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  login.html  update.html
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py
